tests/conformance/v1/fixtures/parse/valid/app_with_import.ai
import ai.models as models

app "ImportApp" {
    version: "1.0.0"
}