tests/conformance/v1/fixtures/parse/invalid/unquoted_string_value.ai
app "TestApp" {
    version: 1.0.0
}